--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <source=<script src="./assets/js/script.js"></script>>
+   <script src="./assets/js/script.js"></script> 
 </body>
 </html>
